--- a/animation.css
+++ b/animation.css
@@ -4,9 +4,7 @@
   box-sizing: border-box;
 }
 
-body {
-  margin: 0;
-}
+
 
 main {
   background: linear-gradient(to bottom, #2d91c2 0%, #1e528e 100%);
@@ -27,7 +25,7 @@ h1 {
 }
 
 #snow-container {  
-  height: 100vh;
+  
   overflow: hidden;
   position: absolute;
   top: 0;
@@ -161,10 +159,11 @@ footer .heart {
   
   
   /* other styles */
-  html, body {
+  /*html, body {
     width:100%;
     height: 100%;
   }
+  */
     .centerer {
       display: table-cell;
       vertical-align: middle;
