--- a/Probafeladat/style.css
+++ b/Probafeladat/style.css
@@ -1,67 +1,100 @@
-body{
+body {
     background-image: url('images/background.png');
 }
+
 .top-section {
-    height: 66.67vh; /* 2/3 a képernyő magasságából */
+    height: 66.67vh;
+    /* 2/3 a képernyő magasságából */
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .bottom-section {
-    height: 33.33vh; /* 1/3 a képernyő magasságából */
+    height: 33.33vh;
+    /* 1/3 a képernyő magasságából */
     display: flex;
     align-items: center;
     justify-content: center;
     background-image: url('images/pool.png');
 }
+
 .top-item {
-    flex: 1; /* Mindhárom rész egyenlően oszlik el */
+    flex: 1;
+    /* Mindhárom rész egyenlően oszlik el */
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: auto; 
-    height: 387px; 
+    margin: auto;
+    height: 387px;
     width: 523px;
     background-image: url('images/screen.png');
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
 }
+
 .bottom-item {
-    flex: 1; /* Mind a hat rész egyenlően oszlik el */
+    flex: 1;
+    /* Mind a hat rész egyenlően oszlik el */
     display: flex;
     align-items: center;
     justify-content: center;
     margin: auto;
-    padding: 10px;
+    border : 5px solid transparent;
+    border-radius: 30px;
     height: 200px;
     width: 200px;
-    
+
 }
+
 img {
-    width: auto; /* A szélesség arányosan növekszik */
-    height: auto; /* A magasság arányosan növekszik */
-    display:flex; 
+    width: auto;
+    height: auto;
+    display: flex;
     margin: 10px;
+    border : 5px solid transparent;
+    border-radius: 30px;
+    padding: 10px;
 }
 
 
-.grayed-out{
+.grayed-out {
     filter: grayscale(100%);
 }
+
 .overlay {
-    position: fixed;  /* Fix pozíció a képernyőn */
+    position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;  /* Teljes szélesség */
-    height: 100vh; /* Teljes magasság */
-    background-color: rgba(0, 0, 0, 0.5); /* Félátlátszó fekete háttér */
-    display: flex;  
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
     justify-content: center;
     align-items: center;
 }
+
 .overlay img {
     width: 100px;
     height: 100px;
 }
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+        transform: scale(0.1);
+    }
+
+    100% {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+
+img {
+    opacity: 0;
+    animation: fadeIn 0.2s ease-out forwards;
+}
+
